--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Login</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <h1>Login</h1>
@@ -15,13 +18,19 @@
         <form>
             <label class="form-label" for="usuario">Usuário</label>
             <div class="input-group mb-3">
-                <span class="input-group-text" id="addon-usuario">@</span>
-                <input type="text" class="form-control" id="usuario" name="usuario" aria-label="usuario" aria-describedby="addon-usuario">
+                <span class="input-group-text" id="addon-usuario"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                        height="16" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5" />
+                    </svg></span>
+                <input type="text" class="form-control" id="usuario" name="usuario" aria-label="usuario"
+                    aria-describedby="addon-usuario">
             </div>
             <label for="senha">Senha</label>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="addon-senha">@</span>
-                <input type="password" class="form-control" id="senha" name="senha" aria-label="senha" aria-describedby="addon-senha">
+                <input type="password" class="form-control" id="senha" name="senha" aria-label="senha"
+                    aria-describedby="addon-senha">
             </div>
             <a href="#">Esqueci a senha</a>
             <a href="#">Criar conta</a>
@@ -32,6 +41,9 @@
     <footer>
         <h6>Site construido por <strong>@Ludson</strong></h6>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
